Avoid overlap of (long) titles and date

--- a/se-web-ui/src/main/resources/catalog/views/swe/less/gn_search_swe.less
+++ b/se-web-ui/src/main/resources/catalog/views/swe/less/gn_search_swe.less
@@ -584,6 +584,16 @@ html, body {
 
 @import "gn_view_swe.less";
 
+// result list
+// 
+// ----- avoid overlap title and date
+.geo-data-row .meta-data {
+  max-width: 70%;
+}
+.geo-data-row .update-tag {
+  max-width: 30%;
+}
+
 .socialmedia-text {
   margin-top: 15px;
 }
